--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,19 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
         {
             "name": "Launch Game",
             "type": "python",
             "request": "launch",
+            "program": "${workspaceFolder}/engine.py",
+            "console": "integratedTerminal"
+        },    
+        {
+            "name": "Launch Game -debug",
+            "type": "python",
+            "request": "launch",
+            "noDebug": true,
             "program": "${workspaceFolder}/engine.py",
             "console": "integratedTerminal"
         }
