Adding new monsters, Kobolds, orcs, Bugbears and trolls Adding new NPC dialog Adding an ending after killing the final boss Fixing movement bug diring dialogs Adding a new monster spawn curve depending of the level of the crypt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,18 @@
 {
-    "python.pythonPath": "/home/belug/.virtualenvs/crypt_hero/bin/python"
+    "python.pythonPath": "/home/belug/.virtualenvs/crypt_hero/bin/python",
+    "cSpell.enabled": false,
+    "cSpell.enabledLanguageIds": [
+        "asciidoc",
+        "css",
+        "git-commit",
+        "json",
+        "jsonc",
+        "markdown",
+        "plaintext",
+        "python",
+        "restructuredtext",
+        "text",
+        "yaml",
+        "yml"
+    ]
 }
