--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
     
         {
             "name": "Launch Game",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/engine.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "args": ["-D",]
         },    
         {
-            "name": "Launch Game -debug",
+            "name": "Game NoDebug",
             "type": "python",
             "request": "launch",
             "noDebug": true,
